Links in new tab

--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
 
 
 <div class="bottom-container">
-  <a class="footer-link" href="https://www.linkedin.com/in/abhishek-anand-99837712b/">LinkedIn</a>
-  <a class="footer-link" href="https://twitter.com/">Twitter</a>
-  <a class="footer-link" href="https://abhi271195.github.io/Task-Tracker/">Website</a>
+  <a class="footer-link" href="https://www.linkedin.com/in/abhishek-anand-99837712b/" target="_blank">LinkedIn</a>
+  <a class="footer-link" href="https://twitter.com/" target="_blank">Twitter</a>
+  <a class="footer-link" href="https://abhi271195.github.io/Task-Tracker/" target="_blank">Website</a>
   <p class="copyright">© Abhishek Anand.</p>
 </div>
 
