--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <div class="skill-row">
       <img class="comp-img" src="Images/comp.png" alt="Web-img">
       <h3>Web Development</h3>
-      <p class="skill-descrption">HTML5, CSS3, Bootstrap, Javascript, ReactJs, Git, NodeJS, Express.JS</p>
+      <p class="skill-descrption">HTML5, CSS3, Bootstrap, Javascript, ReactJs, NextJs, Git, NodeJS, ExpressJs, MongoDb, SQL</p>
     </div>
     <div class="skill-row">
       <img class="GoT-img" src="https://www.flaticon.com/premium-icon/icons/svg/3018/3018979.svg" alt="">
