--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 </div>
 <div class="middle-container">
   <div class="profile">
-    <img src="Images/pp.png" alt="Profile-img">
+    <img src="Images/profile-picture.jpeg" alt="Profile-img">
     <h2>Hello.</h2>
     <p class="intro">I'm a Web developer in India.I have a passion for web development and love to create websites. I even have exposure to Node and express.</p>
   </div>
